include/x264.h


typedef struct x264_t x264_t;
typedef struct x264_nal_t
{
    int i_ref_idc;  
    int i_type;     
    int b_long_startcode;
    int i_first_mb; 
    int i_last_mb;  
    int     i_payload;
    uint8_t *p_payload;
    int i_padding;
} x264_nal_t;
typedef struct x264_zone_t
{
    int i_start, i_end; 
    int b_force_qp; 
    int i_qp;
    float f_bitrate_factor;
    struct x264_param_t *param;
} x264_zone_t;
typedef struct x264_param_t
{
    unsigned int cpu;
    int         i_threads;           
    int         i_lookahead_threads; 
    int         b_sliced_threads;  
    int         b_deterministic; 
    int         b_cpu_independent; 
    int         i_sync_lookahead; 
    int         i_width;
    int         i_height;
    int         i_csp;         
    int         i_bitdepth;
    int         i_level_idc;
    int         i_frame_total; 
    int         i_nal_hrd;
    struct
    {
        int         i_sar_height;
        int         i_sar_width;
        int         i_overscan;    
        int         i_vidformat;
        int         b_fullrange;
        int         i_colorprim;
        int         i_transfer;
        int         i_colmatrix;
        int         i_chroma_loc;    
    } vui;
    int         i_frame_reference;  
    int         i_dpb_size;         
    int         i_keyint_max;       
    int         i_keyint_min;       
    int         i_scenecut_threshold; 
    int         b_intra_refresh;    
    int         i_bframe;   
    int         i_bframe_adaptive;
    int         i_bframe_bias;
    int         i_bframe_pyramid;   
    int         b_open_gop;
    int         b_bluray_compat;
    int         i_avcintra_class;
    int         i_avcintra_flavor;
    int         b_deblocking_filter;
    int         i_deblocking_filter_alphac0;    
    int         i_deblocking_filter_beta;       
    int         b_cabac;
    int         i_cabac_init_idc;
    int         b_interlaced;
    int         b_constrained_intra;
    int         i_cqm_preset;
    char        *psz_cqm_file;      
    uint8_t     cqm_4iy[16];        
    uint8_t     cqm_4py[16];
    uint8_t     cqm_4ic[16];
    uint8_t     cqm_4pc[16];
    uint8_t     cqm_8iy[64];
    uint8_t     cqm_8py[64];
    uint8_t     cqm_8ic[64];
    uint8_t     cqm_8pc[64];
    void        (*pf_log)( void *, int i_level, const char *psz, va_list );
    void        *p_log_private;
    int         i_log_level;
    int         b_full_recon;   
    char        *psz_dump_yuv;  
    struct
    {
        unsigned int intra;     
        unsigned int inter;     
        int          b_transform_8x8;
        int          i_weighted_pred; 
        int          b_weighted_bipred; 
        int          i_direct_mv_pred; 
        int          i_chroma_qp_offset;
        int          i_me_method; 
        int          i_me_range; 
        int          i_mv_range; 
        int          i_mv_range_thread; 
        int          i_subpel_refine; 
        int          b_chroma_me; 
        int          b_mixed_references; 
        int          i_trellis;  
        int          b_fast_pskip; 
        int          b_dct_decimate; 
        int          i_noise_reduction; 
        float        f_psy_rd; 
        float        f_psy_trellis; 
        int          b_psy; 
        int          b_mb_info;            
        int          b_mb_info_update; 
        int          i_luma_deadzone[2]; 
        int          b_psnr;    
        int          b_ssim;    
    } analyse;
    struct
    {
        int         i_rc_method;    
        int         i_qp_constant;  
        int         i_qp_min;       
        int         i_qp_max;       
        int         i_qp_step;      
        int         i_bitrate;
        float       f_rf_constant;  
        float       f_rf_constant_max;  
        float       f_rate_tolerance;
        int         i_vbv_max_bitrate;
        int         i_vbv_buffer_size;
        float       f_vbv_buffer_init; 
        float       f_ip_factor;
        float       f_pb_factor;
        int         b_filler;
        int         i_aq_mode;      
        float       f_aq_strength;
        int         b_mb_tree;      
        int         i_lookahead;
        int         b_stat_write;   
        char        *psz_stat_out;  
        int         b_stat_read;    
        char        *psz_stat_in;   
        float       f_qcompress;    
        float       f_qblur;        
        float       f_complexity_blur; 
        x264_zone_t *zones;         
        int         i_zones;        
        char        *psz_zones;     
    } rc;
    struct
    {
        unsigned int i_left;
        unsigned int i_top;
        unsigned int i_right;
        unsigned int i_bottom;
    } crop_rect;
    int i_frame_packing;
    int i_alternative_transfer;
    int b_aud;                  
    int b_repeat_headers;       
    int b_annexb;               
    int i_sps_id;               
    int b_vfr_input;            
    int b_pulldown;             
    uint32_t i_fps_num;
    uint32_t i_fps_den;
    uint32_t i_timebase_num;    
    uint32_t i_timebase_den;    
    int b_tff;
    int b_pic_struct;
    int b_fake_interlaced;
    int b_stitchable;
    int b_opencl;            
    int i_opencl_device;     
    void *opencl_device_id;  
    char *psz_clbin_file;    
    int i_slice_max_size;    
    int i_slice_max_mbs;     
    int i_slice_min_mbs;     
    int i_slice_count;       
    int i_slice_count_max;   
    void (*param_free)( void* );
    void (*nalu_process)( x264_t *h, x264_nal_t *nal, void *opaque );
} x264_param_t;
void x264_nal_encode( x264_t *h, uint8_t *dst, x264_nal_t *nal );
typedef struct x264_level_t
{
    uint8_t  level_idc;
    uint32_t mbps;        
    uint32_t frame_size;  
    uint32_t dpb;         
    uint32_t bitrate;     
    uint32_t cpb;         
    uint16_t mv_range;    
    uint8_t  mvs_per_2mb; 
    uint8_t  slice_rate;  
    uint8_t  mincr;       
    uint8_t  bipred8x8;   
    uint8_t  direct8x8;   
    uint8_t  frame_only;  
} x264_level_t;
X264_API extern const x264_level_t x264_levels[];
void    x264_param_default( x264_param_t * );
int x264_param_parse( x264_param_t *, const char *name, const char *value );
int     x264_param_default_preset( x264_param_t *, const char *preset, const char *tune );
void    x264_param_apply_fastfirstpass( x264_param_t * );
int     x264_param_apply_profile( x264_param_t *, const char *profile );
X264_API extern const int x264_chroma_format;
enum pic_struct_e
{
    PIC_STRUCT_AUTO              = 0, 
    PIC_STRUCT_PROGRESSIVE       = 1, 
    PIC_STRUCT_TOP_BOTTOM        = 4, 
    PIC_STRUCT_BOTTOM_TOP        = 5, 
    PIC_STRUCT_TOP_BOTTOM_TOP    = 6, 
    PIC_STRUCT_BOTTOM_TOP_BOTTOM = 7, 
    PIC_STRUCT_DOUBLE            = 8, 
    PIC_STRUCT_TRIPLE            = 9, 
};
typedef struct x264_hrd_t
{
    double cpb_initial_arrival_time;
    double cpb_final_arrival_time;
    double cpb_removal_time;
    double dpb_output_time;
} x264_hrd_t;
typedef struct x264_sei_payload_t
{
    int payload_size;
    int payload_type;
    uint8_t *payload;
} x264_sei_payload_t;
typedef struct x264_sei_t
{
    int num_payloads;
    x264_sei_payload_t *payloads;
    void (*sei_free)( void* );
} x264_sei_t;
typedef struct x264_image_t
{
    int     i_csp;       
    int     i_plane;     
    int     i_stride[4]; 
    uint8_t *plane[4];   
} x264_image_t;