ref.rs

    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_param_t>())).nalu_process as *const _ as usize },
        936usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_param_t),
            "::",
            stringify!(nalu_process)
        )
    );
}
extern "C" {
    pub fn x264_nal_encode(h: *mut x264_t, dst: *mut u8, nal: *mut x264_nal_t);
}
#[doc = " H.264 level restriction information"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x264_level_t {
    pub level_idc: u8,
    pub mbps: u32,
    pub frame_size: u32,
    pub dpb: u32,
    pub bitrate: u32,
    pub cpb: u32,
    pub mv_range: u16,
    pub mvs_per_2mb: u8,
    pub slice_rate: u8,
    pub mincr: u8,
    pub bipred8x8: u8,
    pub direct8x8: u8,
    pub frame_only: u8,
}
#[test]
fn bindgen_test_layout_x264_level_t() {
    assert_eq!(
        ::std::mem::size_of::<x264_level_t>(),
        32usize,
        concat!("Size of: ", stringify!(x264_level_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x264_level_t>(),
        4usize,
        concat!("Alignment of ", stringify!(x264_level_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).level_idc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(level_idc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).mbps as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(mbps)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).frame_size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(frame_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).dpb as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(dpb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).bitrate as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(bitrate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).cpb as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(cpb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).mv_range as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(mv_range)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).mvs_per_2mb as *const _ as usize },
        26usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(mvs_per_2mb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).slice_rate as *const _ as usize },
        27usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(slice_rate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).mincr as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(mincr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).bipred8x8 as *const _ as usize },
        29usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(bipred8x8)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).direct8x8 as *const _ as usize },
        30usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(direct8x8)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_level_t>())).frame_only as *const _ as usize },
        31usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_level_t),
            "::",
            stringify!(frame_only)
        )
    );
}
extern "C" {
    pub static mut x264_levels: [x264_level_t; 0usize];
}
extern "C" {
    #[doc = " Basic parameter handling functions"]
    pub fn x264_param_default(arg1: *mut x264_param_t);
}
extern "C" {
    pub fn x264_param_parse(
        arg1: *mut x264_param_t,
        name: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub static mut x264_preset_names: [*const ::std::os::raw::c_char; 11usize];
}
extern "C" {
    pub static mut x264_tune_names: [*const ::std::os::raw::c_char; 9usize];
}
extern "C" {
    pub fn x264_param_default_preset(
        arg1: *mut x264_param_t,
        preset: *const ::std::os::raw::c_char,
        tune: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn x264_param_apply_fastfirstpass(arg1: *mut x264_param_t);
}
extern "C" {
    pub static mut x264_profile_names: [*const ::std::os::raw::c_char; 7usize];
}
extern "C" {
    pub fn x264_param_apply_profile(
        arg1: *mut x264_param_t,
        profile: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub static x264_chroma_format: ::std::os::raw::c_int;
}
pub const pic_struct_e_PIC_STRUCT_AUTO: pic_struct_e = 0;
pub const pic_struct_e_PIC_STRUCT_PROGRESSIVE: pic_struct_e = 1;
pub const pic_struct_e_PIC_STRUCT_TOP_BOTTOM: pic_struct_e = 4;
pub const pic_struct_e_PIC_STRUCT_BOTTOM_TOP: pic_struct_e = 5;
pub const pic_struct_e_PIC_STRUCT_TOP_BOTTOM_TOP: pic_struct_e = 6;
pub const pic_struct_e_PIC_STRUCT_BOTTOM_TOP_BOTTOM: pic_struct_e = 7;
pub const pic_struct_e_PIC_STRUCT_DOUBLE: pic_struct_e = 8;
pub const pic_struct_e_PIC_STRUCT_TRIPLE: pic_struct_e = 9;
pub type pic_struct_e = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x264_hrd_t {
    pub cpb_initial_arrival_time: f64,
    pub cpb_final_arrival_time: f64,
    pub cpb_removal_time: f64,
    pub dpb_output_time: f64,
}
#[test]
fn bindgen_test_layout_x264_hrd_t() {
    assert_eq!(
        ::std::mem::size_of::<x264_hrd_t>(),
        32usize,
        concat!("Size of: ", stringify!(x264_hrd_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x264_hrd_t>(),
        8usize,
        concat!("Alignment of ", stringify!(x264_hrd_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<x264_hrd_t>())).cpb_initial_arrival_time as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_hrd_t),
            "::",
            stringify!(cpb_initial_arrival_time)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<x264_hrd_t>())).cpb_final_arrival_time as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_hrd_t),
            "::",
            stringify!(cpb_final_arrival_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_hrd_t>())).cpb_removal_time as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_hrd_t),
            "::",
            stringify!(cpb_removal_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_hrd_t>())).dpb_output_time as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_hrd_t),
            "::",
            stringify!(dpb_output_time)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x264_sei_payload_t {
    pub payload_size: ::std::os::raw::c_int,
    pub payload_type: ::std::os::raw::c_int,
    pub payload: *mut u8,
}
#[test]
fn bindgen_test_layout_x264_sei_payload_t() {
    assert_eq!(
        ::std::mem::size_of::<x264_sei_payload_t>(),
        16usize,
        concat!("Size of: ", stringify!(x264_sei_payload_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x264_sei_payload_t>(),
        8usize,
        concat!("Alignment of ", stringify!(x264_sei_payload_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_sei_payload_t>())).payload_size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_sei_payload_t),
            "::",
            stringify!(payload_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_sei_payload_t>())).payload_type as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_sei_payload_t),
            "::",
            stringify!(payload_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_sei_payload_t>())).payload as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_sei_payload_t),
            "::",
            stringify!(payload)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x264_sei_t {
    pub num_payloads: ::std::os::raw::c_int,
    pub payloads: *mut x264_sei_payload_t,
    pub sei_free: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
}
#[test]
fn bindgen_test_layout_x264_sei_t() {
    assert_eq!(
        ::std::mem::size_of::<x264_sei_t>(),
        24usize,
        concat!("Size of: ", stringify!(x264_sei_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x264_sei_t>(),
        8usize,
        concat!("Alignment of ", stringify!(x264_sei_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_sei_t>())).num_payloads as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_sei_t),
            "::",
            stringify!(num_payloads)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_sei_t>())).payloads as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_sei_t),
            "::",
            stringify!(payloads)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_sei_t>())).sei_free as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_sei_t),
            "::",
            stringify!(sei_free)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x264_image_t {
    pub i_csp: ::std::os::raw::c_int,
    pub i_plane: ::std::os::raw::c_int,
    pub i_stride: [::std::os::raw::c_int; 4usize],
    pub plane: [*mut u8; 4usize],
}
